--- a/backend/src/main/resources/web/index.html
+++ b/backend/src/main/resources/web/index.html
@@ -1,9 +1,22 @@
 <html>
+
+<head>
+    <style>
+        body {
+            margin: 0;
+        }
+
+        canvas {
+            width: 100vw;
+            height: 100vh;
+            display: block;
+        }
+    </style>
+</head>
 <body>
+    <canvas id="canvas"></canvas>
 
-<div id="canvas"/>
-
-<script type="text/javascript" src="frontend-fastopt.js"></script>
-<script type="text/javascript" src="frontend-launcher.js"></script>
+    <script type="text/javascript" src="frontend-fastopt.js"></script>
+    <script type="text/javascript" src="frontend-launcher.js"></script>
 </body>
 </html>
