--- a/backend/src/main/resources/web/index.html
+++ b/backend/src/main/resources/web/index.html
@@ -1,6 +1,10 @@
 <html>
 
 <head>
+    <title>Dashboard</title>
+    <link rel="icon"
+          type="image/png"
+          href="/img/shipA.png">
     <style>
         body {
             margin: 0;
@@ -12,6 +16,7 @@
             display: block;
         }
     </style>
+
 </head>
 <body>
     <canvas id="canvas"></canvas>
