--- a/backend/src/main/resources/web/index.html
+++ b/backend/src/main/resources/web/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Dashboard</title>
+    <title>HWG</title>
     <link rel="icon"
           type="image/png"
           href="/img/shipA.png">
