Added chat and radar

--- a/backend/src/main/resources/web/index.html
+++ b/backend/src/main/resources/web/index.html
@@ -15,6 +15,16 @@
             height: 100vh;
             display: block;
         }
+
+        .flex-column-reverse {
+            display: flex;
+            flex-direction: column-reverse;
+        }
+
+        .flex-column {
+            display: flex;
+            flex-direction: column;
+        }
     </style>
 
 </head>
