--- a/backend/src/main/resources/web/index.html
+++ b/backend/src/main/resources/web/index.html
@@ -8,12 +8,20 @@
     <style>
         body {
             margin: 0;
+            height: 100%;
+            overflow: hidden;
         }
 
-        canvas {
+        canvas.main {
             width: 100vw;
             height: 100vh;
             display: block;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            overflow: auto;
         }
 
         .flex-column-reverse {
@@ -28,8 +36,8 @@
     </style>
 
 </head>
-<body>
-    <canvas id="canvas"></canvas>
+<body style="background:black">
+    <canvas id="canvas" class="main"></canvas>
 
     <script type="text/javascript" src="frontend-fastopt.js"></script>
     <script type="text/javascript" src="frontend-launcher.js"></script>
