Time logging, use fullOptJS

--- a/backend/src/main/resources/web/index.html
+++ b/backend/src/main/resources/web/index.html
@@ -39,7 +39,7 @@
 <body style="background:black">
     <canvas id="canvas" class="main"></canvas>
 
-    <script type="text/javascript" src="frontend-fastopt.js"></script>
+    <script type="text/javascript" src="frontend-opt.js"></script>
     <script type="text/javascript" src="frontend-launcher.js"></script>
 </body>
 </html>
