git versions etc.

--- a/backend/src/main/resources/web/index.html
+++ b/backend/src/main/resources/web/index.html
@@ -2,6 +2,8 @@
 
 <head>
     <title>HWG</title>
+    <meta name="viewport" content="initial-scale=1, width=device-width">
+    <meta name="theme-color" content="#202022">
     <link rel="icon"
           type="image/png"
           href="/img/shipA.png">
