--- a/backend/src/main/resources/web/index.html
+++ b/backend/src/main/resources/web/index.html
@@ -4,6 +4,8 @@
     <title>HWG</title>
     <meta name="viewport" content="initial-scale=1, width=device-width">
     <meta name="theme-color" content="#202022">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <link rel="icon"
           type="image/png"
           href="/img/shipA.png">
